--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = polyclonal tests docs notebooks --nbval --ignore setup.py --ignore docs/_build --doctest-modules --doctest-glob='*.rst'
+addopts = polyclonal tests docs notebooks --nbval --ignore setup.py --ignore docs/_build --ignore notebooks/RBD_mut_escape_df.py --doctest-modules --doctest-glob='*.rst'
