--- a/pytest.ini
+++ b/pytest.ini
@@ -8,7 +8,7 @@ addopts =
   --ignore setup.py
   --ignore docs/_build
   --ignore notebooks/RBD_mut_escape_df.py
-  --ignore notebooks/_test_optimize
   --ignore notebooks/fit_RBD.ipynb
+  --ignore optimization_benchmarks
   --doctest-modules
   --doctest-glob='*.rst'
