--- a/pytest.ini
+++ b/pytest.ini
@@ -3,12 +3,11 @@ addopts =
   polyclonal
   tests
   docs
-#  notebooks
+  notebooks
   --nbval
   --ignore setup.py
   --ignore docs/_build
   --ignore notebooks/RBD_mut_escape_df.py
-  --ignore notebooks/fit_RBD.ipynb
   --ignore tests/profile_fitting.ipynb
   --ignore optimization_benchmarks
   --doctest-modules
