fixed pytest failures

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ addopts =
   --ignore docs/_build
   --ignore notebooks/RBD_mut_escape_df.py
   --ignore tests/profile_fitting.ipynb
+  --ignore tests/icxx_prediction.ipynb
   --ignore optimization_benchmarks
   --doctest-modules
   --doctest-glob='*.rst'
