update concentration notebook

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,5 +10,6 @@ addopts =
   --ignore notebooks/RBD_mut_escape_df.py
   --ignore tests/profile_fitting.ipynb
   --ignore optimization_benchmarks
+  --ignore notebooks/concentration_test.ipynb
   --doctest-modules
   --doctest-glob='*.rst'
