--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ addopts =
   --ignore setup.py
   --ignore docs/_build
   --ignore notebooks/RBD_mut_escape_df.py
+  --ignore notebooks/specify_epitopes.ipynb
   --ignore tests/profile_fitting.ipynb
   --ignore optimization_benchmarks
   --doctest-modules
