naive test to see if we can check format via Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ install:
   - pip install -r test_requirements.txt
   - pip install -e .
 
-script: 
+script:
   - flake8
   - pytest
+  - black
 
 branches:
   only:
