fixing pytest.ini so can specify test on command line

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,10 @@
 [pytest]
-addopts = 
+testpaths =
   polyclonal
   tests
   docs
   notebooks
+addopts =
   --nbval
   --ignore setup.py
   --ignore docs/_build
