create RBD boostrapping notebbok and ignore from CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = 
+addopts =
   polyclonal
   tests
   docs
@@ -13,6 +13,7 @@ addopts =
   --ignore notebooks/mutation_rate.ipynb
   --ignore notebooks/concentration_set.ipynb
   --ignore tests/profile_fitting.ipynb
+  --ignore tests/test_rbd_bootstrap.ipynb
   --ignore optimization_benchmarks
   --doctest-modules
   --doctest-glob='*.rst'
