ignore `partition_function` notebook in tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ addopts =
   --ignore setup.py
   --ignore docs/_build
   --ignore notebooks/RBD_mut_escape_df.py
+  --ignore notebooks/partition_function.ipynb
   --ignore notebooks/specify_epitopes.ipynb
   --ignore notebooks/library_size.ipynb
   --ignore notebooks/mutation_rate.ipynb
