remove bootstrapping from docs/tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,6 +13,8 @@ addopts =
   --ignore notebooks/library_size.ipynb
   --ignore notebooks/mutation_rate.ipynb
   --ignore notebooks/concentration_set.ipynb
+  --ignore notebooks/_fit_multi_epitopes.ipynb
+  --ignore notebooks/RBD_bootstrap.ipynb
   --ignore tests/profile_fitting.ipynb
   --ignore optimization_benchmarks
   --doctest-modules
