sanitize `nbval` tests for different `pandas` versions

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ addopts =
   docs
   notebooks
   --nbval
+  --sanitize-with nbval_sanitize.cfg
   --ignore setup.py
   --ignore docs/_build
   --ignore notebooks/RBD_mut_escape_df.py
